# prajna

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Jenkinsfile  LICENSE.txt  README.md  README_ZH.md  matazure_config.json
.github/workflows/: Remote-Docker-Test.yml  action.yml  ci.yml  cmake.yml  deploy-images.yml
asserts/code/: add_performance.py
assets/code/: add_performance.py  add_performance.rs
builtin_packages/: .prajna  _array.prajna  _debug.prajna  _ptr.prajna  atomic.prajna  bindings.prajna  cuda.prajna  dict.prajna  disable_dynamic_interface.prajna  dynamic.prajna  dynamic_array.prajna  float.prajna  gpu.prajna  gpu2.prajna  hash.prajna  hashdict.prajna  heap.prajna  int.prajna  io.prajna  list.prajna  net_minimal.prajna  nvgpu_wmma.prajna  operator.prajna  optional.prajna  primitive_type.prajna  queue.prajna  serializable.prajna  serialize.prajna  set.prajna  sort.prajna  sortable.prajna  stack.prajna  string.prajna  tensor.prajna  test.prajna  variant.prajna
builtin_packages/cuda/: .prajna
builtin_packages/fs/: _c.prajna
builtin_packages/hip/: .prajna
builtin_packages/net/: .prajna  _c.prajna  tcp.prajna
builtin_packages/thread/: .prajna  _c.prajna
dockerfiles/: prajna.dockerfile  ubuntu_dev.dockerfile  ubuntu_dev_amdgpu.dockerfile  ubuntu_dev_amdgpu_jenkins.dockerfile  ubuntu_dev_gpu.dockerfile  ubuntu_dev_gpu_jenkins.dockerfile  ubuntu_dev_jenkins.dockerfile  ubuntu_dev_nvgpu.dockerfile  ubuntu_dev_nvgpu_jenkins.dockerfile
docs/: CI.md  Prajna Programming Language Guide.md  Prajna 编译器异构 GPU 后端支持实践.md  The Prajna Programming Language Guide.md  programming_guide.md  tutorials_en.md  tutorials_zh.md  为什么是Prajna.md  在般若中使用C函数.md  开发者指南.md  般若编程规范.md  般若编程语言命名约定.md  般若编程语言安装.md  般若编程语言实现原理.md  般若编程语言指南.md  般若编程语言设计.md
docs/develop/: 开发者指南.md  般若编程语言命名约定.md  般若编程语言实现原理.md  般若编程语言设计.md  般若编译器架构.md
docs/tutorials/: 01_运行与模式.md  02_变量与类型系统.md  03_函数_方法_闭包.md  04_结构体_接口_动态分发.md  05_模板_泛型.md  14_序列化_测试.md  (+8 more)
examples/: CMakeLists.txt  README.md  add_performance.prajna  client.prajna  closure.prajna  custom_int.prajna  general_template.prajna  hello_world.prajna  hello_world.prajnascript  interface.prajna  net.prajna  nuklear_basic.prajna  nuklear_c_test.prajna  nuklear_minimal_test.prajna  nuklear_no_init.prajna  nuklear_tests.prajna  server.prajna  tcp_client.prajna  tcp_server.prajna  template_function.prajna  template_struct.prajna  tri.prajna  zmq_client.prajna  zmq_server.prajna
examples_in_cpp/: add.prajna  add_performance.cpp  main.cpp
prajna/: .matazure_config.json  CMakeLists.txt  assert.hpp  exception.hpp  global_config.hpp  helper.hpp  logger.hpp  mangle_name.hpp  named.hpp  reference_count.hpp  rich_bash.hpp
prajna/ast/: CMakeLists.txt  ast.hpp  source_position.hpp
prajna/bindings/: core.hpp
prajna/builtin_sources/: bindings.prajna  bootstrap.prajna  core.prajna  cuda.prajna  gpu.prajna  implement_primitive_types.prajna  memory.prajna  primitive_pointer_template.prajna  ptr.prajna  serialize.prajna  tensor.prajna
prajna/codegen/: CMakeLists.txt  llvm_codegen.cpp  llvm_codegen.h
prajna/compiler/: CMakeLists.txt  boost_exception.cpp  compiler.cpp  compiler.h  print_callback.cpp  print_callback.h  stdio_callback.cpp  stdio_callback.h
prajna/ir/: CMakeLists.txt  callback_visitor.hpp  cloner.hpp  construct_parent_node.hpp  context.cpp  context.h  global_context.cpp  global_context.h  ir.hpp  ir_print_visitor.hpp  operation_instruction.hpp  target.hpp  type.hpp  value.hpp  verify.hpp  visitor.hpp
prajna/jit/: CMakeLists.txt  cuda_runtime_loader.cpp  cuda_runtime_loader.hpp  execution_engine.cpp  execution_engine.h  gpu_compiler.hpp  hip_runtime_loader.cpp
prajna/lowering/: CMakeLists.txt  create_primitive_env.hpp  expression_lowering_visitor.cpp  expression_lowering_visitor.hpp  interpreter_lowering_visitor.hpp  ir_builder.hpp  ir_utility.hpp  lower.cpp  lower.h  statement_lowering_visitor.cpp  statement_lowering_visitor.hpp  symbol_table.cpp  symbol_table.hpp  template.hpp
prajna/parser/: CMakeLists.txt  parse.cpp  parse.h
prajna/parser/grammar/: CMakeLists.txt  assign_to.hpp  expression_grammar.cpp  expression_grammar.h  expression_grammar_def.hpp  handler.hpp  statement_grammar.cpp  statement_grammar.h  statement_grammar_def.hpp
prajna/parser/lexer/: CMakeLists.txt  code_lexer.cpp  code_lexer.h  code_lexer_config.hpp  code_lexer_def.hpp
prajna/transform/: CMakeLists.txt  README.md  ReadeMe.md  construct_parent_node.hpp  each.hpp  extract_affine_for_transform.cpp  extract_gpu_grid_pass.hpp  flattern_block.hpp  initializer_and_copy_destroy_callback.hpp  inline_function.hpp  make_compatiable_with_llvm_pass.hpp  reference_count.hpp  transform.cpp  transform.h  transform_pass.hpp  transform_to_ssa_pass.hpp  utility.hpp  verify.hpp  wrap_instruction_function_pass.hpp
prajna_builtin_packages/: .prajna  __bool.prajna  __char.prajna  __f32.prajna  __float.prajna  __i64.prajna  __int.prajna  __ptr.prajna  __rawptr.prajna  __str.prajna  __type.prajna  _dynamic.prajna  _ptr.prajna  array.prajna  atomic.prajna  bindings.prajna  chrono.prajna  cuda.prajna  debug.prajna  dict.prajna  disable_dynamic_interface.prajna  dynamic.prajna  dynamic_array.prajna  gpu.prajna  implement_primitive_types.prajna  io.prajna  list.prajna  memory.prajna  operator.prajna  optional.prajna  prajna_bootstrap.prajna  primitive_pointer_template.prajna  ptr.prajna  reference_count.prajna  serializable.prajna  serialize.prajna  stack.prajna  string.prajna  tensor.prajna  testing.prajna
scripts/: build.sh  check_clang_format.sh  check_large_files.sh  clone_submodules.sh  configure.sh  start_docker_env.sh  start_gpu_docker_env.sh  start_nvidia_docker_env.sh  test.sh  test_examples.sh  test_prajna.sh  windows_build.bat
tests/: CMakeLists.txt  compiler_tests.cpp  logical_operator_test.prajna  utility.hpp
tools/: CMakeLists.txt
xeus_prajna/: CMakeLists.txt  main.cpp  prajna_xeus_interpreter.hpp
xeus_prajna/cmake/: openssl.cmake
xeus_prajna/share/prajna/: kernel.json.in
xeus_prajna/tests/: hello_world.ipynb
(+223 files in other folders)
